float: left solved issue. now add margin to year to improve readability

--- a/stylesheets/pubstyles.css
+++ b/stylesheets/pubstyles.css
@@ -28,6 +28,8 @@
 .Publist ul li pubyear{ 
 	font-weight: 500;
 	float: left;
+	margin-left: 2px;
+	margin-right: 2px;
 }
 
 .Publist ul li journal{ 
